# Projet-C

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet-finall.glade  projet-finall.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  ameni.txt  callbacks.c  callbacks.h  ficheDonneur.c  ficheDonneur.h  gestionDons.c  gestionDons.h  interface.c  interface.c.bak  interface.h  main.c  nermine.txt  nour.txt  projet-finall  utilisateur.c  utilisateur.h
src/.deps/: callbacks.Po  ficheDonneur.Po  gestionDons.Po
